<resources>
    <string name="app_name">Wisgrow</string>
    <string name="image">Photos</string>
    <string name="preview">Preview</string>
    <string name="select">Choose</string>
    <string name="verification_code_login">Log in by verification code</string>
    <string name="password_login">Log in by password</string>
    <string name="input_phone_number">Please enter your email</string>
    <string name="input_verification_code">Please enter confirmation code</string>
    <string name="get_verification_code">Get verification code</string>
    <string name="login">Log in</string>
    <string name="create_new_account"><u>Create a new account</u></string>
    <string name="wechat_login"><b>wechat landing</b></string>
    <string name="input_account">Please enter your account </string>
    <string name="input_password">Please enter the password</string>
    <string name="input_confirm_password">Please enter the password again</string>
    <string name="forgot_password">Forget Password?</string>
    <string name="forget_password">Forget Password</string>
    <string name="bind_phone">Mobile Binding</string>
    <string name="phone_number">Mobile NO.</string>
    <string name="verification_code">Verification Code</string>
    <string name="bind_immediately">Bind Now</string>
    <string name="register_immediately">Register Now</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_and_agree">Register and agree</string>
    <string name="yanghuaji_agreement">《Wisgrow Service Terms》</string>
    <string name="phone_register">Mobile Registration</string>
    <string name="save">Save</string>
    <string name="check_and_edit_personal_data">View and edit personal data</string>
    <string name="my_planting_record">My planting record</string>
    <string name="system_notification">System notification</string>
    <string name="modify_password">Change the password</string>
    <string name="setting">Setting</string>
    <string name="quit_application">Log out</string>
    <string name="switch_permutation_pattern">Switch the arrange pattern</string>
    <string name="go_to_shop">Enter the shop</string>
    <string name="my_equipment">My Device</string>
    <string name="planting_diary_title">Plant Diary</string>
    <string name="go_to_add">Add +</string>
    <string name="add">Add</string>
    <string name="add_diary">Add +</string>
    <string name="intelligent_planting">Planting</string>
    <string name="planting_diary">Diary</string>
    <string name="personal_center">Me</string>
    <string name="go_to_shopping">Shop</string>
    <string name="title_activity_diary_list">DiaryListActivity</string>
    <string name="net_error">Network error</string>
    <string name="empty">Null</string>
    <string name="label_gallery_select_max_size">Choose%dat most</string>
    <string name="prompt_empty">Oh~, it empty!</string>
    <string name="prompt_error">Sorry, you have or more error!</string>
    <string name="prompt_loading">Loading…</string>
    <string name="reload"><u>Reload</u></string>
    <string name="diary_empty">No diary now ,just add it</string>
    <string name="equipment_empty">No device  now ,just add it</string>
    <string name="network_unavailable">Network is unavailable</string>
    <string name="add_failed">Add Failed</string>
    <string name="light_in_other_status"><u>LED is in other states？</u></string>
    <string name="diary_name">Name of diary</string>
    <string name="please_input_diary_name">Input the name of diary</string>
    <string name="equipment_name">Device Name</string>
    <string name="plant_time">Planting time</string>
    <string name="add_equipment">Add Device</string>
    <string name="scan_two_dimensional_code_after_product">Scan the QR code</string>
    <string name="or_click_icon_follow">Or click on the following product icon</string>
    <string name="connect_power_and_confirm_entering_network">Power up the device, confirm the device entering the pairing mode</string>
    <string name="light_flicker">LEDs are flashing</string>
    <string name="searching">Searching</string>
    <string name="add_equipment_after_search_completed">Search and add device</string>
    <string name="not_add_skip">Not add and skip to the next</string>
    <string name="search_plant">Search the plant</string>
    <string name="wifi_name">Wi-Fi Name</string>
    <string name="not_support_5g_wifi">(5GHz Wi-Fi NOT supported)</string>
    <string name="please_input_wifi_name">Enter Wi-Fi name</string>
    <string name="wifi_password">Wi-Fi Password</string>
    <string name="wifi_name_is_current_phone_wifi">Wi-Fi is which your phone connected currently</string>
    <string name="can_go_to">you can check  it by</string>
    <string name="set_wlan">Setting-WLAN</string>
    <string name="check">Check</string>
    <string name="equipment_connecting_please_white">Device Connecting…</string>
    <string name="equipment_connect_failed_please_check_follow_question">Device connection failed! Please check the following：</string>
    <string name="if_input_correct_wifi_name_and_password">1.Please confirm the correct Wi-Fi name and password</string>
    <string name="ensure_equipment_entering_network">2.Please ensure the device into the pairing mode</string>
    <string name="ensure_equipment_covered_wifi">3.Please ensure the device is covered by Wi-Fi signa</string>
    <string name="ensure_equipment_connect_2.4g_wifi">4.Please ensure your mobile connecting to the 2.4GHz Wi-Fi</string>
    <string name="equipment_name_with_colon">Device Name：</string>
    <string name="equipment_bind_success">Device binding successfully</string>
    <string name="three_seconds_into_next">Go to the next step in 3s</string>
    <string name="user_name">User name</string>
    <string name="please_input_user_name">Please enter the user name</string>
    <string name="sex">Gender</string>
    <string name="birthday">Birthday</string>
    <string name="mac_address">MAC Address</string>
    <string name="serial_number">SN</string>
    <string name="equipment_type">Model</string>
    <string name="software_version">Version</string>
    <string name="newest">Latest</string>
    <string name="please_input_equipment_name">Please enter the device name</string>
    <string name="save_water_model">Water-saving Mode</string>
    <string name="open_light_time">LED on start</string>
    <string name="forbid_light_open">LED off start</string>
    <string name="forbid_light_close">LED off end</string>
    <string name="equipment_group">Device Group</string>
    <string name="plant_name">Plant Name</string>
    <string name="please_input_plant_name">Please enter the plant name</string>
    <string name="growth_circle">Growth Cycle</string>
    <string name="custom_group">Custom Group</string>
    <string name="complete">Complete</string>
    <string name="search_nearby_location">Search  loacation nearby</string>
    <string name="not_display_location">Location is invisible</string>
    <string name="original_password">Original password</string>
    <string name="please_input_original_password">Please enter original password</string>
    <string name="new_password">New password</string>
    <string name="please_input_new_password">Please enter new password</string>
    <string name="please_input_password_again">Please enter the password again</string>
    <string name="plant_mode">Planting Mode</string>
    <string name="change_name_please_delete_data_before">Change plant name, go to previous page, </string>
    <string name="operation_then">Click to clear planting data </string>
    <string name="add_diary_record_changes_every_day">Record the detail of the plant every day</string>
    <string name="qr_code">QR Code</string>
    <string name="qr_code_into_frame_can_auto_scan">Scan the QR code</string>
    <string name="gallery">Photo Album</string>
    <string name="flashlight">Flashlight</string>
    <string name="equipment_setting">Device Setting</string>
    <string name="plant_setting">Plant Setting</string>
    <string name="message_push">Alert</string>
    <string name="equipment_information">Device Information</string>
    <string name="clear_current_data">Clear planting data</string>
    <string name="novice_guide">Quick Guide</string>
    <string name="service_terms">Terms of service</string>
    <string name="version_information">Version</string>
    <string name="online_shop">Shop</string>
    <string name="record_cultivation_moving">Write down your feeling at this moment</string>
    <string name="select_photo">Please choose the photo</string>
    <string name="add_equipment_open_journey_plant_flower">Add device, build your smart gardens anywhere</string>
    <string name="light">Lighting</string>
    <string name="refresh">Refresh</string>
    <string name="planting_setting">Setting</string>
    <string name="newest_version">Upgrade</string>
    <string name="water_recycle">Recycle</string>
    <string name="firmware_pic_desc">Firmware picture description</string>
    <string name="device_firmware_text">Device Firmware Upgrade</string>
    <string name="add_group">Add a group</string>
    <string name="please_input_group_name">Enter group name</string>
    <string name="default_equipment">Default Group</string>
    <string name="group_manage">Group Management</string>
    <string name="take_photo">Take Photos</string>
    <string name="select_from_gallery">Choose from photo album</string>
    <string name="cancel">Cancel</string>
    <string name="placement_position">Placement</string>
    <string name="share_to">Share to </string>
    <string name="male">Man</string>
    <string name="female">Woman</string>
    <string name="secrecy">Keep secret</string>
    <string name="how_to_into_state">How to set into pairing status</string>
    <string name="check_state_button">Choose the state button</string>
    <string name="ensure">Confirm</string>
    <string name="ensure_delete_this_group">Do you want to delete the group？</string>
    <string name="have_new_version_ensure_update">New version available, confirm to upgrade？</string>
    <string name="update_failed">Upgrade failed</string>
    <string name="stop">Stop</string>
    <string name="update_success">Upgrade successfully</string>
    <string name="version_update">Version update</string>
    <string name="immediate_update">Update now</string>
    <string name="exit_app">Exit</string>
    <string name="update_later">Update later</string>
    <string name="app_update">Update wisgrow</string>
    <string name="delete">Delete</string>
    <string name="please_select_equipment_to_add">Choose the device</string>
    <string name="bind_no_response">No response to the device binding</string>
    <string name="connect_equipment">Connecting Device</string>
    <string name="light_open_success">Turn on LED successfully</string>
    <string name="light_open_failed_retry_later">Failed to turn on LED, and please try again later</string>
    <string name="light_close_success">Turn off  LED successfully</string>
    <string name="light_close_failed_retry_later">Failed to turn off  LED, and please try again later</string>
    <string name="delete_will_reset_equipment_if_ensure">Deletion will restore the device to factory setting，please confirm</string>
    <string name="tv_update_device_firmware_text">New firmware detected,would you like to upgrade?</string>
    <string name="too_low">Low</string>
    <string name="normal">Normal</string>
    <string name="too_high">High</string>
    <string name="water_Shortage">Low</string>
    <string name="account_conflict_please_login_again">The account has been logged in at other terminals ,log in again？</string>
    <string name="ensure_logout">Do you want to log out?</string>
    <string name="updating">Upgrading…</string>
    <string name="update_failed_retry_later">Upgrade failed, and please try again later</string>
</resources>