<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:layout_height="match_parent">


    <include layout="@layout/layout_toolbar" />

    <ImageView
        android:layout_marginTop="27dp"
        android:layout_marginStart="22dp"
        android:src="@mipmap/img_connect_failed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:textSize="17sp"
        android:textColor="#333333"
        android:layout_marginTop="12dp"
        android:text="@string/equipment_connect_failed_please_check_follow_question"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="13sp"
        android:textColor="#999999"
        android:layout_marginTop="10dp"
        android:text="@string/if_input_correct_wifi_name_and_password"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="13sp"
        android:textColor="#999999"
        android:layout_marginTop="10dp"
        android:text="@string/ensure_equipment_entering_network"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="13sp"
        android:textColor="#999999"
        android:layout_marginTop="10dp"
        android:text="@string/ensure_equipment_covered_wifi"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="13sp"
        android:textColor="#999999"
        android:layout_marginTop="10dp"
        android:text="@string/ensure_equipment_connect_2.4g_wifi"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/tv_reload"
        android:textSize="18sp"
        android:textColor="#87BC52"
        android:layout_marginTop="45dp"
        android:text="@string/reload"
        android:layout_marginStart="29dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
