<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_marginStart="30dp"
        android:layout_marginTop="53dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wifi_name"
            android:textColor="#333333"
            android:textSize="13sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_support_5g_wifi"
            android:textColor="#FDB46E"
            android:textSize="13sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="29dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="22dp"
        android:orientation="horizontal">

        <EditText
            android:textCursorDrawable="@drawable/edit_cursor_color"
            android:id="@+id/et_wifi_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/please_input_wifi_name"
            android:textColor="#333333"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/img_check"
            android:layout_width="50dp"
            android:scaleType="center"
            android:layout_height="match_parent"
            android:src="@mipmap/img_check" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="11dp"
        android:background="#C6C6C6" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="26dp"
        android:text="@string/wifi_password"
        android:textColor="#333333"
        android:textSize="13sp" />

<LinearLayout
    android:layout_marginEnd="29dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <EditText
        android:textCursorDrawable="@drawable/edit_cursor_color"
        android:id="@+id/et_wifi_password"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginStart="29dp"
        android:layout_marginTop="23dp"
        android:inputType="textPassword"
        android:background="@null"
        android:hint="@string/input_password"
        android:textColor="#333333"
        android:textSize="17sp" />

    <FrameLayout
        android:id="@+id/frame_show_pwd"
        android:layout_width="50dp"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/iv_show_psw"
            android:layout_marginTop="20dp"
            android:layout_gravity="bottom"
            android:src="@mipmap/img_hide_psw"
            android:layout_width="50dp"
            android:scaleType="centerInside"
            android:layout_height="match_parent" />

    </FrameLayout>
</LinearLayout>



    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="9dp"
        android:background="#C6C6C6" />
    <TextView
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="#666666"
        android:textSize="11sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_name_is_current_phone_wifi"/>
    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:textColor="#666666"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/can_go_to"/>

        <TextView
            android:id="@+id/tv_setting_wireless"
            android:textColor="#FDB46E"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_wlan"/>

        <TextView
            android:textColor="#666666"
            android:textSize="11sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check"/>
    </LinearLayout>

    <ImageView
        android:layout_marginTop="30dp"
        android:id="@+id/img_next"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/img_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



</LinearLayout>
