<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include layout="@layout/layout_toolbar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="24dp"
            android:text="@string/phone_number"
            android:textColor="#999999"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="22dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_input_phone_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#B8B8B8"
                android:inputType="phone"
                android:background="@null"
                android:textSize="14sp"
                android:hint="@string/input_phone_number" />

            <ImageView
                android:id="@+id/img_check"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@mipmap/img_check" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="11dp"
            android:background="#C6C6C6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="27dp"
            android:text="@string/verification_code"
            android:textColor="#999999"
            android:textSize="13sp" />

        <LinearLayout
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_input_verification_code"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number"
                android:background="@null"
                android:textColor="#B8B8B8"
                android:textSize="14sp"
                android:hint="@string/input_verification_code" />

            <View
                android:layout_width="2dp"
                android:layout_height="16dp"
                android:layout_marginStart="8dp"
                android:background="#E4E4E4" />

            <TextView
                android:id="@+id/tv_get_verification_code"
                android:textSize="12dp"
                android:textColor="#87BC52"
                android:layout_marginStart="15dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/get_verification_code"/>


        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="7dp"
            android:background="#C6C6C6" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            android:textColor="#999999"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="17dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_input_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:textColor="#B8B8B8"
                android:inputType="textPassword"
                android:background="@null"
                android:hint="@string/input_password" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="10dp"
            android:background="#C6C6C6" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginTop="12dp"
            android:text="@string/confirm_password"
            android:textColor="#999999"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="17dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                android:inputType="textPassword"
                android:textColor="#B8B8B8"
                android:background="@null"
                android:hint="@string/input_confirm_password" />

        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginEnd="29dp"
            android:layout_marginStart="29dp"
            android:layout_marginTop="12dp"
            android:background="#C6C6C6" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="47dp"
            android:background="@mipmap/img_login_button_bg"
            android:text="@string/register_immediately"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


        <LinearLayout
            android:id="@+id/ll_consent_agreement"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="98dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:textColor="#999999"
                android:textSize="12sp"
                android:text="@string/register_and_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:textColor="#87BC52"
                android:textSize="12sp"
                android:text="@string/yanghuaji_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>


