<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <TextView
        android:id="@+id/tv_new_guide"
        android:layout_marginTop="24dp"
        android:layout_marginStart="31dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:text="@string/novice_guide"
        android:textSize="15sp"
        android:drawablePadding="25dp"
        android:drawableStart="@mipmap/img_new_guide"
        android:drawableEnd="@mipmap/img_personal_center_arrow"
        android:layout_marginEnd="20dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="20dp"
        android:background="@mipmap/img_dotted_background" />

    <TextView
        android:id="@+id/tv_service_term"
        android:layout_marginTop="24dp"
        android:layout_marginStart="31dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#333333"
        android:text="@string/service_terms"
        android:textSize="16sp"
        android:drawablePadding="25dp"
        android:drawableStart="@mipmap/img_service_term"
        android:drawableEnd="@mipmap/img_personal_center_arrow"
        android:layout_marginEnd="17dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginEnd="14dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="17dp"
        android:background="@mipmap/img_dotted_background" />

    <LinearLayout
        android:id="@+id/ll_version_information"
        android:layout_marginTop="17dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_marginStart="31dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:textColor="#333333"
            android:text="@string/version_information"
            android:textSize="16sp"
            android:drawablePadding="25dp"
            android:drawableStart="@mipmap/img_version_information"
            />

        <TextView
            android:id="@+id/tv_version_information"
            android:textColor="#7BC835"
            android:textSize="15sp"
            android:text="V1.1"
            android:layout_marginEnd="14dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

    </LinearLayout>

</LinearLayout>
